Minor navbar toggler class refactor

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,14 +1,14 @@
 :root {
   --navbar-toggler-icon: #ddd7d3;
 }
-.custom-toggler .navbar-toggler-icon {
+.navbar.custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(221,215,211)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
-.custom-toggler.navbar-toggler {
+.navbar.custom-toggler .navbar-toggler {
   border-color: var(--navbar-toggler-icon) !important;
   outline: none;
 }
-.custom-toggler.navbar {
+.navbar.custom-toggler {
   background-color: #917b6d !important;
 }
 
